--- a/draft/master_thesis.bib
+++ b/draft/master_thesis.bib
@@ -176,10 +176,66 @@ Key finding: Revealing Metadata to attackers might compromise privacy (e.g. shar
   groups       = {Requirements},
 }
 
+@Article{Akinbi2021,
+  author   = {Alex Akinbi and Ehizojie Ojie},
+  journal  = {Forensic Science International: Digital Investigation},
+  title    = {Forensic analysis of open-source XMPP multi-client social networking apps on iOS devices},
+  year     = {2021},
+  issn     = {2666-2817},
+  pages    = {301122},
+  volume   = {36},
+  abstract = {In this paper, we present forensic analysis of Monal and Siskin IM, two decentralized open-source XMPP multi-client social networking apps on iOS devices that provide anonymity and privacy using OMEMO end-to-end encryption. We identified databases maintained by each app and storage locations within the iOS file system that stores the local copies of user information and metadata. We analyzed the databases and storage locations for evidential data of forensic value. The results in this paper show a detailed analysis and correlation of data stored in each app's database to identify the local user's multiple IM accounts and contact list, contents of messages exchanged with contacts, and chronology of conversations. The focus and main contributions of this study include a detailed description of artifacts of forensic interest that can be used to aid mobile forensic investigations.},
+  doi      = {https://doi.org/10.1016/j.fsidi.2021.301122},
+  groups   = {Requirements},
+  keywords = {Mobile forensics, iOS forensics, Monal, Siskin IM, Instant messaging, XMPP, OMEMO, Social networking},
+  url      = {https://www.sciencedirect.com/science/article/pii/S2666281721000196},
+}
+
+@Article{Isobe2021,
+  author  = {Isobe, Takanori and Ito, Ryoma},
+  journal = {IEEE Access},
+  title   = {Security Analysis of End-to-End Encryption for Zoom Meetings},
+  year    = {2021},
+  pages   = {90677-90689},
+  volume  = {9},
+  doi     = {10.1109/ACCESS.2021.3091722},
+  groups  = {Requirements},
+}
+
+@InProceedings{Xiong2012,
+  author    = {Xiong, Huijun and Zhang, Xinwen and Yao, Danfeng and Wu, Xiaoxin and Wen, Yonggang},
+  booktitle = {Proceedings of the Second ACM Conference on Data and Application Security and Privacy},
+  title     = {Towards End-to-End Secure Content Storage and Delivery with Public Cloud},
+  year      = {2012},
+  address   = {New York, NY, USA},
+  pages     = {257–266},
+  publisher = {Association for Computing Machinery},
+  series    = {CODASPY '12},
+  abstract  = {Recent years have witnessed the trend of leveraging cloud-based services for large scale content storage, processing, and distribution. Security and privacy are among top concerns for the public cloud environments. Towards end-to-end content security, we propose and implement CloudSeal, a scheme for securely sharing and distributing content via the public cloud. CloudSeal ensures the confidentiality of content in the public cloud environments with flexible access control policies for subscribers and efficient content distribution via content delivery network.CloudSeal seamlessly integrates symmetric encryption, proxy-based re-encryption, k-out-of-n secret sharing, and broadcast revocation mechanisms. These algorithms allow CloudSeal to cache the major part of a stored cipher content object in the delivery network for content distribution, while keeping the minor part in the cloud storage for key management. The separation of subscription-based key management and confidentiality-oriented proxy-based re-encryption policies uniquely enables flexible and scalable deployment of the solution as well as strong security for cached content in the network. We have implemented CloudSeal on Amazon Web Services, including EC2, S3, and CloudFront. Through experimental evaluation, we demonstrate the end-to-end efficiency and scalability of CloudSeal.},
+  doi       = {10.1145/2133601.2133633},
+  isbn      = {9781450310918},
+  keywords  = {security, cloud computing, cloud storage, confidentiality, content distribution, proxy-based re-encryption},
+  location  = {San Antonio, Texas, USA},
+  numpages  = {10},
+  url       = {https://doi.org/10.1145/2133601.2133633},
+}
+
+@Article{Hoerandner2020,
+  author    = {H{\"o}randner, Felix and Ramacher, Sebastian and Roth, Simon},
+  journal   = {Journal of Banking and Financial Technology},
+  title     = {Selective end-to-end data-sharing in the cloud},
+  year      = {2020},
+  number    = {1},
+  pages     = {139--157},
+  volume    = {4},
+  publisher = {Springer},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
 0 AllEntriesGroup:;
-1 StaticGroup:Requirements\;0\;1\;0x0000ffff\;\;\;;
+1 StaticGroup:Requirements\;0\;0\;0x0000ffff\;\;\;;
 2 StaticGroup:Adversary Models\;0\;0\;0x8a8a8aff\;\;\;;
+1 StaticGroup:Solutions\;0\;1\;0xff0000ff\;\;\;;
 }
