--- a/main.tex
+++ b/main.tex
@@ -15,7 +15,7 @@
 % \documentclass[twoside,wip]{./zyx/mythesis}
 
 % Add the library file for the literature references
-\addbibresource{./draft/master_thesis.bib}
+\addbibresource{./literature.bib}
 
 \begin{document}
 % Cover, abstract, table of contents, etc.
