--- a/myconfig.sty
+++ b/myconfig.sty
@@ -40,6 +40,6 @@
 \newcommand*{\myAdvisor}{Valentin Zieglmeier}
 
 % Path to your git-directory root - set to "." if you do not use git
-\newcommand*{\myGitRoot}{.}
+\newcommand*{\myGitRoot}{https://github.com/haggj/Masterarbeit}
 
 % Add own global commands here if you want
