--- a/draft/master_thesis.bib
+++ b/draft/master_thesis.bib
@@ -231,6 +231,16 @@ Key finding: Revealing Metadata to attackers might compromise privacy (e.g. shar
   publisher = {Springer},
 }
 
+@InProceedings{Davis2001,
+  author    = {Davis, Don},
+  booktitle = {USENIX Annual Technical Conference, General Track},
+  title     = {Defective Sign & Encrypt in S/MIME, PKCS\# 7, MOSS, PEM, PGP, and XML.},
+  year      = {2001},
+  pages     = {65--78},
+  groups    = {Requirements},
+  url       = {https://theworld.com/~dtd/sign_encrypt/sign_encrypt7.html#tthFtNtAAB},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
