--- a/txt/3-requirements.tex
+++ b/txt/3-requirements.tex
@@ -6,8 +6,8 @@
 
 \chapter{Requirements}
 
-This chapter identifies the requirements of the software which is implemented in the context of this thesis.
-Overall, there are three overall goals which need to be achieved. 
+This chapter identifies the requirements of the software which needs to be implemented in the context of this thesis.
+Overall, there are three major goals which need to be achieved. 
 
 \begin{enumerate}[label=\Roman*.]
     \item Data owners need to be able to share (and revoke) their log data with other users in the system.
@@ -19,140 +19,211 @@ Overall, there are three overall goals which need to be achieved.
 Traditional requirements engineering methods usually differentiate between functional and non-functional requirements based on the views of different stakeholders~\todo{sources}.
 Since this thesis operates within the security domain, the traditional requirements engineering process needs to be adapted: 
 Precise assumptions about what to protect and against whom to protect are mandatory for a successful implementation and evaluation.
-Thus, this chapter closely follows the terms and methodology proposed by \citeauthor{Fabian2010} \cite{Fabian2010}.
+Thus, this chapter closely follows the terms and methodology proposed by~\citeauthor{Fabian2010}~\cite{Fabian2010}.
 
-\citeauthor{Fabian2010} fundamentally differentiate between functional, non-functional and security requirements, which are extracted from functional, non-functional and security goals.
+The authors fundamentally differentiate between functional, non-functional and security requirements, which are extracted from functional, non-functional and security goals.
 Goals are rather abstract and vague formulations of what the system should achieve. 
 They are refined into more detailed requirements for two reasons.
 First, verifiable requirements allow us to compare different approaches and to finally choose one solution from the solution space. 
-Second, they also help to verify and evaluate if the implemented solution satisfies the overall expectations. \cite{Fabian2010}
+Second, they also help to verify and evaluate if the implemented solution satisfies the overall expectations.~\cite{Fabian2010}
 
 While the overall goal I will be treated as a functional goal (subsection \ref{functional-requriements}), the goals II and III are understood as security goals (subsection \ref{security-requriements}).
 Further non-functional goals will be identified in subsection \ref{non-functional-requriements}.
 Within each subsection the identified goals will be refined into requirements.
 This finally results in a list of verifiable and consistent system requirements for this thesis (subsection \ref{system-requriements}).
 
-Please note, that the identification of these requirements was not a linear process as presented in this chapter.
+Please note that the identification of these requirements was not a linear process as presented in this chapter.
 Instead, multiple iterations of reasoning about possible solutions and considering their implications for the inverse transparency toolchain were necessary.
 This process finally lead to the detailed decomposition of the requirements depicted in the following.
 
 
-\newpage
-\section{Functional requirements}\label{functional-requriements}
-Functional requirements describe \enquote{what the system does} \cite[11]{Mylopoulos1992}.
-In the context of this thesis the following functional goals are identified:
+
+\section{System requirements}\label{system-requriements}
+This section summarizes all identified requirements elaborated in this chapter.
+They were derived from the major goals of this thesis.
+For details and the rationale behind each requirements see the corresponding subsections below.
+
+\subsubsection{Functional requirements}
 \begin{itemize}
-    \item Data owners need to to share their log data with other users in the system.
-    \item Data owners need to revoke the access of other users to their log data
+    \item [F1.] Data owners can always access logs concerning them.
+    \item [F2.] Data owners can share their logs with other users in the system.
+    \item [F3.] Data owners can revoke the access of other users to their logs.
 \end{itemize}
 
-They can be refined into more concrete requirements. 
-Let $L_{ID}$ denote an access log. 
-This log reflects the fact, that a data consumer has accessed data of the user with identity $ID$.
-Let $Access(L_{ID})$ denote the set of all users, which can access the log $L_{ID}$.
-E.g. $Access(L_{ID}) =\{1,2,3\}$ reflects the situation, where user $1$, $2$ and $3$ have access to $L_{ID}$.
-It is mandatory, that during the whole lifetime of a access log the data owner can read the log.
-Thus, the following is required at all times: $ ID \in Access(L_{ID})$.
+\subsubsection{Security requirements}
+\begin{itemize}
+    \item [S1.] Only the data owner and those explicitly given access to the logs can access them.
+    \item [S2.] The receiving users can verify that the data owner has intended to share the log with them.
+    \item [S3.] The receiving users can validate the creator of a log.
+\end{itemize}
 
-This notation allows a exact definition of the functional requirements:
+\subsubsection{Non-functional requirements}
+\begin{itemize}
+    \item [N1.] Minimal number of trusted entities
+    \item [N2.] Standardized cryptographic algorithms
+    \item [N3.] Usability
+    \item [N5.] Minimal resource utilization
+\end{itemize}
 
-\subsubsection{F1. Creating access logs}
-Once a log was created, only the data owner can access the content the log:
+\section{Functional requirements}\label{functional-requriements}
+Functional requirements describe \enquote{what the system does}~\cite[11]{Mylopoulos1992}.
+They describe the accessability of logs in the inverse transparency toolchain.
+Having access to a log effectively means that a user is able to decrypt the encrypted log.
+In the context of this thesis, the following functional goals are identified:
+\begin{itemize}
+    \item Data owners can always access logs concerning them.
+    \item Data owners can share their logs with other users in the system.
+    \item Data owners can revoke the access of other users to their logs.
+\end{itemize}
+
+These goals can be refined into more concrete requirements. 
+Let $L_{o_i}$ denote an log. 
+This log reflects the fact, that a data consumer has accessed data of the user with identity $o_i$.
+Let $Access(L_{o_i})$ denote the set of all users, which can access the log $L_{o_i}$.
+E.g. $Access(L_{o_i}) =\{1,2,3\}$ reflects the situation, where user $1$, $2$ and $3$ have access to $L_{o_i}$.
+This notation allows an exact definition of the functional requirements and will be used later to validate the implemented protocol.
+
+
+\subsubsection{F1. Data owners can always access logs concerning them.}
+The system needs to ensure that the owner has always access to logs concerning him or her. 
+Thus, the following invariant needs to hold at all times:
 \begin{displaymath}
-    Access(L_{ID}) =\{ID\}
+    o_i \in Access(L_{o_i})
 \end{displaymath}
 
-\subsubsection{F2. Sharing access logs}
+
+\subsubsection{F2. Data owners can share their logs with other users in the system.}
 The data owner can share a log with other users in the system. 
 Assume the log is shared to the set of users $S$.
 After the sharing operation has finished, each user in $S$ can access the log.
 The sharing can be described as: 
 \begin{displaymath}
-    Access(L_{ID}) = Access(L_{ID}) \cup S
+    Access(L_{o_i}) = Access(L_{o_i}) \cup S
 \end{displaymath}
 
-\subsubsection{F3. Revoking access logs}
+\subsubsection{F3. Data owners can revoke the access of other users to their logs.}
 The data owner of a log can revoke the access to the log.
 Assume the log is revoked from the set of users $R$.
 After revocation operation has finished, no user in $S$ can access the log anymore.
 The revocation can be described as:
 \begin{displaymath}
-    Access(L_{ID}) = Access(L_{ID}) \setminus R
+    Access(L_{o_i}) = Access(L_{o_i}) \setminus R
 \end{displaymath}
 
 \section{Security requirements}\label{security-requriements}
-As proposed by \citeauthor{Fabian2010}, this section determines the security goals of this thesis and refines them into security requirements.
-Each security goals is initially classified into confidentiality, integrity or availability (CIA-triad \todo{quelle}). 
-From the overall goals II and III we obtain:
+As proposed by~\citeauthor{Fabian2010}~\cite{Fabian2010}, this section determines the security goals of this thesis and refines them into security requirements.
+Based on the major goals specified above and the identified functional requirements the following security goals have been identified:
+
 \begin{itemize}
-    \item Access logs are end-to-end encrypted (confidentiality, integrity and availability)
-    \item Access logs are integrity protected (integrity)
+    \item Only the data owner and those explicitly given access to the logs can access them.
+    \item The receiving users can verify that the data owner has intended to share the log with them.
+    \item The receiving users can validate the creator of a log.
 \end{itemize}
 
-These security goals can be refined into security requirements by annotating them with with additional information, a counter-stakeholder and specific circumstances.
+These security goals can be refined into security requirements by annotating them with additional information, a counter-stakeholder and specific circumstances~\cite{Fabian2010}.
+Following this approach, each security requirement is specified by providing theses details.
 The counter-stakeholder is an adversary attacking the system.
 Satisfying a security requirement should effectively defend against this adversary.
 The specified circumstances elaborate additional conditions which affect the security goal.
 
-\subsubsection{S1. Access logs are end to end encrypted}
+\subsubsection{S1. Only the data owner and those explicitly given access to the logs can access them.}
 
-\paragraph{Information}
-In the context of the inverse transparency toolchain, the intended end-to-end encryption should ensure that only authorized users can read access logs.
-Specifically, no server within the system can access the content of these logs and a malicious server can not insert faked logs or modify existing data.
-
-\paragraph{Counter-stakeholder}
-This security goal is intended to implement E2EE in order to defend against an active adversary (details in section ~\ref{end-to-end}).
-In the context of the inverse transparency toolchain, the attacker is adapted by the following means. 
-The untrusted network is the whole infrastructure of the toolchain, except trusted entities and the application the user interacts with.
+In the context of the inverse transparency toolchain, the intended end-to-end encryption should ensure that only authorized users can access logs.
+As specified in the functional requirements, the data owner can always decrypt the log.
+The data owner can also share the log with other users which are then able to decrypt.
+Authorized users are the data owner of the log plus all users the data owner has given access.
+No untrusted entity within the system can access the content of these logs.
+The untrusted network is the whole infrastructure of the toolchain, except trusted servers and the application a user interacts with.
 This implies, that all frontend applications are trusted (e.g. the Clotilde UI and all integrated Monitor components).
-This thesis implements metrics to defend against the following scenarios:
-\begin{itemize}
-    \item A malicious entity within the untrusted network observes the data and tries to read the content of access logs.
-    \item A malicious entity within the untrusted network modifies or replaces traffic to insert malicious, faked or misformed access logs.
-\end{itemize}
-\todo{Examples}
-\paragraph{Circumstances}
-The content of the logs can only be accessed by authorized entities (encryption endpoints).
-The receiver of a access log needs to be able to verify that the access log was actually shared by the intended sender. 
-The initial encryption endpoints are the monitor-component, which creates the access log, and the data owner.
-Once the access log is shared by the data owner with the set of users $S$, each user in $S$ becomes an encryption endpoint.
-Once the access to a log is revoked for a user, this user is no longer an encryption endpoint.
-Thus, the dynamic behavior in the system implicates a dynamically changing set of encryption endpoints.
 
-Note, that modified or inserted data can only be detected within trusted entities.
-The malicious action itself can not be prevented.
-Rather, mitigation mechanisms need to ensure, that malicious actions are detected and handled by trusted entities.
+The following example attack motivates this requirement.
+Consider an attacker Eve who is the database admin of the Overseer server.
+Eve wants to know which monitor accesses which data frequently.
+Thus, he logs into the server and tries to extract this information from the database.
+If the stored logs are not encrypted, Eve can learn anything about the logs he might be interested in.
 
-\subsubsection{S2. Access logs are integrity protected}
+This example demonstrates how a passive attacker could access the content of all logs stored in the toolchain.
+The attacker is passive because Eve does not participate in the protocol.
+He simply observes the stored data.
+The implemented protocol should defend against this attacker.
 
-\paragraph{Information}
-This thesis implements a new feature, allowing a data owner to share logs with other users within the system.
-However, this also introduces the risk of a data owner creating faked logs or modifying existing logs.
-Note, that this integrity protection is different from the protection provided by E2EE.
-The later aims to protect the encrypted access log.
-The protection required by this security goals protects the decrypted access log.
-Once a shared log is received, the receiver must first verify if the encrypted data was modified during transit (integrity protection of E2EE).
-Later, once the log was decrypted, the receiver additionally needs to verify if the provided access log was modified by an unauthorized entity.
-       
-\paragraph{Counter-stakeholder}
-This security goal is intended to defend against a malicious data owner, who tries to manipulate access logs. 
+
+\subsubsection{S2. The receiving users can verify that the data owner has intended to share the log with them.}
+
+The functional requirements demand, that only the data owner of a log is allowed to share a log.
+No other user should be able to share the log in the name of the data owner.
+Whenever a user receives an encrypted log it needs to be sure that the originator of the cipher is the data owner of the encrypted log.
+Moreover, the receiver also needs to be sure that the data owner actually has intended to share the log with him or her.
+
+The following example attack motivates this requirement.
+Assume Alice to be a data owner and Eve to be a malicious user.
+Further assume that Alice shares a access log with Eve.
+Eve now has valid access to the log and can decrypt the encrypted log.
+Eve could itself apply the encryption algorithm and could specify Bob als valid receiver.
+If the exchanged message does not contain information about the sender and intended receiver, there is no way for Bob to know who actually sent the message and if the log was intentionally shared with him.
+Bob might assume that Alice sent the message because she is the data owner of the received log.
+Moreover, Bob could implicitly assume that he is a valid receiver because he can decrypt the message.
+In this scenario, however, Alice did not want to share the log with Bob.
+The log was simply forwarded by Eve without permission.
+
+This example demonstrates how an active attacker could share logs with unintended users without notice.
+The attacker forwards a valid log to an arbitrary user in the system.
+The implemented protocol in the context of this thesis should defend against this attack.
+A first idea to resolve this requirement is the use of cryptographic signatures.
+If a data owner signs the shared log, the receiver can verify that the sender indeed wanted to share the log.
+However, a simple signature does not prevent the described attack due to the risk of surreptitious forwarding~\cite{Davis2001}.
+This makes sense because Eve could simply forward the signed message to Bob.
+Bob can verify that Alice wanted to share the log but Bob does not know if Alice wanted to share the log with him.
+This can be fixed if the data owner additionally includes and signs the set of valid receivers into the exchanged message.
+If the identity of the receiving user is singed by the data owner, the receiver can be sure that the data owner intentionally shared the log for him or her.
+
+
+\subsubsection{S3. The receiving users can validate the creator of a log.}
+
+A data owner can share logs with others within the system.
+However, this introduces the risk that a malicious data owner shares forged logs with other users by manipulating existing logs or creating arbitrary new logs.
+The manipulation of logs can be detected by integrity protection mechanisms.
+Unfortunately, this does not prevent a data owner from create new logs with a valid integrity checksum.
+A stronger defense is necessary here because any user who receives a log needs to verify who the creator of this log is.
+Only a log of a trusted or valid creator should be accepted.
+
+The following example motivates this requirement.
+Assume Eve to be a malicious data owner.
+Thus, he has access to all logs concerning him.
+Eve might want to harm a specific data consumer for any reason.
+To do so, Eve modifies an existing log or he creates new logs that claim the data consumer to access illegal data.
+Eve applies to encryption algorithm and shares the forged log with other users.
+Without further protection the receiving users can not verify the creator of the log.
+There is no way to detect this fraud.
+
+This example demonstrates how a malicious data owner could insert forged log into the system.
+The implemented protocol should defend against this attack.
+This can be realized with cryptographic signatures.
+Upon creation of a log the data consumer signs the log.
+This way a receiving user can verify if the log was modified by the data owner.
+Note that there is no risk of surreptitious forwarding here.
+A shared log is not determined for a single user. 
+Due to the dynamically changing set of users who might have access to the log, the data consumer can not specify the intended receivers during the creation of the log.
+Moreover, this is not a decision the data consumer is allowed to make.
+
+
+This security goal is intended to defend against a malicious data owner, who tries to manipulate logs. 
 Specifically, the adversary performs the following steps:
 \begin{itemize}
-    \item The malicious data owner decrypts the access log as intended.
+    \item The malicious data owner decrypts the log as intended.
     \item The malicious data owner modifies the decrypted data.
     \item The malicious data owner finally shares the modified data with other users.
 \end{itemize}
 Thus, it is assumed to defend against an active attacker not following the intended protocol.
 Further it is assumed, that the attacker does not have the computational power to to break cryptographic primitives without knowing the keys.
 
-\paragraph{Circumstances}
-An authorized monitor component initially create access logs. 
-Upon creation, these access logs can only be accessed by the data owner (see goal F1).
-The data owner might want to share these access logs.
-Each time a user receives a shared access logs, the user needs to verify if the access log was created by a authorized monitor.
+An authorized monitor component initially create logs. 
+Upon creation, these logs can only be accessed by the data owner (see goal F1).
+The data owner might want to share these logs.
+Each time a user receives a shared log, the user needs to verify if the log was created by a authorized monitor.
 
 \section{Non-functional requirements}\label{non-functional-requriements}
-Non-functional requirements can be characterized as \enquote{global requirements on its development or operational costs, performance, reliability, maintainability, portability, robustness and the like} \cite[11]{Mylopoulos1992}.
+Non-functional requirements can be characterized as \enquote{global requirements on its development or operational costs, performance, reliability, maintainability, portability, robustness and the like}~\cite[11]{Mylopoulos1992}.
 In contrast to the functional and security requirements, the non-functional requirements are not a direct result of the overall requirements of the thesis.
 Thus, they are not strictly mandatory.
 At the same time, however, they add additional value to potential solutions.
@@ -162,17 +233,16 @@ The solution $A$ should be preferred over a solution $B$, if $A$ resolves more n
 During multiple iterations of elaborating potential solutions, the list of non-functional goals has grown to the following stable collection:
 
 
-\subsubsection{N1. Trusted Entities}
-By definition, trusted entities are not part of untrusted network. 
+\subsubsection{N1. Minimal number of trusted entities}
+By definition, trusted entities are not part of the untrusted network. 
 Thus, the proposed E2EE (detail in section \ref{security-requriements}) does not defend against them.
-This implies, that a compromised trusted server undermines the security of the whole toolchain.
-To reduce the risk and attack surface, the toolchain should rely on a minimal amount of trusted entities.
+This implies that a compromised trusted server undermines the security of the whole toolchain.
+To reduce the risk and attack surface, the toolchain should rely on a minimal number of trusted entities.
 
 \subsubsection{N2. Standardized cryptographic algorithms}
 The current implemented frontend of the inverse transparency toolchain runs within the browser. 
-The Web Cryptographic API \cite{WebCryptoApi2017} defines an interface to perform cryptographic operations within browsers:
-\enquote{[It] simply exposes already existing and often heavily verified cryptographic functionality to Web application developers through a standardized interface.} ~\cite[959]{Halpin2014}
-
+The Web Cryptographic API~\cite{WebCryptoApi2017} defines an interface to perform cryptographic operations within browsers. 
+It \enquote{exposes already existing and often heavily verified cryptographic functionality to Web application developers through a standardized interface}~\cite[959]{Halpin2014}.
 This allows to run cryptographic operations outside of JavaScript and enables secure and performant cryptography within the browser~\cite{Halpin2014}.
 This API, however, is limited to specific primitives. 
 Advanced encryption schemes developed within recent years are not yet defined and available in the API.
@@ -187,43 +257,12 @@ However, this comes with the cost of increased design and implementation effort.
 
 Furthermore, this approach is motivated by the principle of least effort, which states that humans will spent the least amount of work to get a task done~\cite{Levenson2018}.
 
-\subsubsection{N4. Simplicity of design}
-To increase maintainability of the toolchain, a simple design with a minimal amount of infrastructure and communication should be implemented.
-This also requires a proper documentation of the implemented features.
 
-\subsubsection{N5. Resoure utilization}
+\subsubsection{N4. Minimal resource utilization}
 This is a performance criterion.
 The implemented solution should avoid resource overhead in terms of storage and computation.
 While this is directly related to the non-functional requirement N2, more aspects need to be considered here.
 Duplicated storage of data should be avoided.
 Specifically, an optimal solution does not store the same data encrypted with different keys in the database to prevent redundancy.
-
-
-\section{System requirements}\label{system-requriements}
-This section summarizes all identified requirements elaborated in this chapter.
-They were derived from the overall goals of this thesis.
-For details see the corresponding subsections above.
-
-\subsubsection{Functional requirements}
-\begin{itemize}
-    \item [F1.] Creating access logs
-    \item [F2.] Sharing access logs
-    \item [F3.] Revoking access logs
-\end{itemize}
-
-\subsubsection{Security requirements}
-\begin{itemize}
-    \item [S1.] Access logs are end-to-end encrypted
-    \item [S2.] Access logs are integrity protected
-\end{itemize}
-
-\subsubsection{Non-functional requirements}
-\begin{itemize}
-    \item [N1.] Trusted Entities
-    \item [N2.] Standardized cryptographic algorithms
-    \item [N3.] Usability
-    \item [N4.] Simplicity of design
-    \item [N5.] Resource utilization
-\end{itemize}
 
 \end{document}
