--- a/literature.bib
+++ b/literature.bib
@@ -234,11 +234,11 @@ Key finding: Revealing Metadata to attackers might compromise privacy (e.g. shar
 @InProceedings{Davis2001,
   author    = {Davis, Don},
   booktitle = {USENIX Annual Technical Conference, General Track},
-  title     = {Defective Sign & Encrypt in S/MIME, PKCS\# 7, MOSS, PEM, PGP, and XML.},
+  title     = {Defective Sign {\& Encrypt in S/MIME, PKCS\#} 7, MOSS, PEM, PGP, and XML.},
   year      = {2001},
   pages     = {65--78},
   groups    = {Requirements},
-  url       = {https://theworld.com/~dtd/sign_encrypt/sign_encrypt7.html#tthFtNtAAB},
+  url       = {https://theworld.com/~dtd/sign_encrypt/sign_encrypt7.html},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
