--- a/txt/4-survey-solutions.tex
+++ b/txt/4-survey-solutions.tex
@@ -4,6 +4,14 @@
 
 \chapter{Survey of potential solutions}
 
+\section{External encryption}
+\section{Mutual encryption}
+\section{Key server}
+\section{Broadcast encryption}
+\section{Hybrid encryption}
+
+\section{Further investigations}
+
 
 \todo{Consider ZOOM E2EE}
 Zoom operates within a live environment, e.g. all participants are online. 
